# cs336

./: README.md
assignment1-basics/: .clang-format  .gitignore  Answers.md  CMakeLists.txt  pyproject.toml  test.py
assignment1-basics/bpe_cpp/: main.cpp  test.cpp
assignment1-basics/cs336_basics/: __init__.py  basic_block.py  bpe.py  linear.py  model.py  pre_norm_block.py  pretokenization_example.py  tokenizer.py  utils.py
assignment1-basics/cs336_basics/bpe/: __init__.py  bpe_tokenizer.py  constants.py  test.txt  train_bpe.py
assignment1-basics/experiments/: tokenizer_experiments.py
assignment1-basics/scripts/: train_tokenizer.sh
assignment1-basics/tests/: adapters.py
assignment1-basics/train/: encode.py  train_tokenizer.py
assignment1-basics/utils/: compare_tokens.py
